[tool.poetry]
name = "uvicorn-gunicorn-docker"
version = "0.1.0"
description = "Docker image with Uvicorn managed by Gunicorn for high-performance web applications in Python >=3.11 with performance auto-tuning. Maintained by Bereyziat Development"
authors = ["Jonathan Bereyziat <contact@bereyziat.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
docker = "^6.0.0"
pytest = "^5.4.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
